@@ -156,6 +156,8 @@ The following extensions are migrated into MediaWiki 1.14:
 * Added "link" parameter to image links, to allow images to link to an 
   arbitrary title or URL. This should replace inaccessible and incomplete
   solutions such as CSS-based overlays and ImageMap.
+* (bug 368) Don't use caption for alt attribute; allow manual specification
+  using new "alt=" parameter for images
 
 === Bug fixes in 1.14 ===
 
